labotrack/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labotrack
  annotations:
    linkerd.io/inject: enabled
  labels:
    app.kubernetes.io/part-of: labotrack
