labotrack/manifests/30-analysis-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis-api
  namespace: labotrack
  labels:
    app: analysis-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analysis-api
  template:
    metadata:
      labels:
        app: analysis-api
    spec:
      serviceAccountName: analysis-api
      containers:
        - name: analysis-api
          image: localhost:5000/analysis-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: analysis-api
  namespace: labotrack
  labels:
    app: analysis-api
spec:
  selector:
    app: analysis-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
