labotrack/manifests/70-linkerd-authz.yaml
# Authorization policies binding callers to Servers.
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sample-api-allow-frontend
  namespace: labotrack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sample-api
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: result-frontend-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sample-api-allow-analysis
  namespace: labotrack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sample-api
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: analysis-api-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: analysis-api-allow-frontend
  namespace: labotrack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: analysis-api
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: result-frontend-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: result-frontend-allow-public
  namespace: labotrack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: result-frontend
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: all-networks
